--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <finalName>notesapp-docker</finalName>
     </build>
 
 </project>
