--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,8 +1,9 @@
+# deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: notesapp-deployment
-  namespace: myapp
+  namespace: my-app
   labels:
     app: notesapp
 spec:
@@ -17,7 +18,8 @@ spec:
     spec:
       containers:
       - name: notesapp
-        image: 344000030130.dkr.ecr.us-east-1.amazonaws.com/notesapp:latest
+        # Make sure this matches your full ECR image path
+        image: 344000030130.dkr.ecr.us-east-1.amazonaws.com/myapp/notesapp:latest
         ports:
         - containerPort: 8080
         resources:
@@ -33,13 +35,9 @@ spec:
             port: 8080
           initialDelaySeconds: 10
           periodSeconds: 10
-        
         livenessProbe:
           httpGet:
             path: /health
             port: 8080
           initialDelaySeconds: 30
           periodSeconds: 10
-
-
-        
